--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^4.35.3",
     "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
     "react-parallax-component": "^1.0.6",
     "react-responsive-carousel": "^3.2.23",
