--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^4.35.3",
+    "axios": "^1.5.0",
     "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
