--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@smastrom/react-rating": "^1.3.2",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.6",
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.5.0",
     "firebase": "^10.4.0",
